manifests/media/wizarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: wizarr
  name: wizarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wizarr
  template:
    metadata:
      labels:
        app: wizarr
    spec:
      containers:
      - image: ghcr.io/wizarrrr/wizarr
        name: wizarr
        ports:
        - containerPort: 5690
        volumeMounts:
        - name: wizarr-appdata
          mountPath: /data/database
      volumes:
        - name: wizarr-appdata
          persistentVolumeClaim:
            claimName: wizarr-appdata
