manifests/media/wizarr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wizarr
  labels:
    app: wizarr
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: "letsecrypt-production"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - invite.watch.cafio.co
    secretName: cafio.co-tls
  rules:
  - host: invite.watch.cafio.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wizarr
            port:
              number: 5690
